--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,1 +1,31 @@
-<h1>Login</h1>
+<div class="container">
+  <h1 class="text-center">Login</h1>
+  <div class="row">
+    <div class="col-lg-6 col-md-8 col-sm-10 m-auto">
+      <div class="card p-3">
+        {{#if msg}}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{msg}}.
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        {{/if}}
+        <div class="form">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" class="form-control" value={{email}}>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control">
+          </div>
+          <button type="submit" class="btn btn-primary mr-3" id="logBtn">Login</button>
+          <a href="/signup">Not a member?</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="/assets/js/login.js"></script>
