--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,1 +1,27 @@
-<h1>Signup</h1>
+<div class="container">
+  <h1 class="text-center">Sign Up</h1>
+  <div class="row">
+    <div class="col-lg-6 col-md-8 col-sm-10 m-auto">
+      <div class="card p-3">
+        <div class="form">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" name="email" id="email" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control">
+          </div>
+          <button type="submit" class="btn btn-primary mr-3" id="signBtn">Signup</button>
+          <a href="/login">Already a member?</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="/assets/js/signup.js"></script>
