--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,1 +1,28 @@
-<h1>Members</h1>
+<div class="container">
+  <div class="row align-items-center rounded my-2 p-1 border border-info bg-light">
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <h3 class="text-center text-info">{{username}}'s To Do's</h3>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 bg-info p-1 rounded">
+      <div class="form-row">
+        <div class="input-group col-4 text-center align-self-center justify-content-center">
+          <label class="text-white text-center p-0 m-0" for="project">New Project</label>
+        </div>
+        <div class="input-group col-8">
+          <input type="text" name="project" id="project" class="form-control">
+          <div class="input-group-append">
+            <button class="btn btn-dark" id="addProject">+</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    {{#each projects}}
+    {{!-- This does not work yet --}}
+    <h3>{{project}}</h3>
+    {{/each}}
+  </div>
+</div>
+
+<script src="/assets/js/members.js"></script>
