adding in project display to page

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -17,11 +17,8 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    {{#each projects}}
-    {{!-- This does not work yet --}}
-    <h3>{{project}}</h3>
-    {{/each}}
+  <div class="row" id="outputArea">
+    
   </div>
 </div>
 
