--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="/assets/css/members.css">
+
 <div class="container">
   <div class="row align-items-center rounded my-2 p-1 border border-info bg-light">
     <div class="col-lg-6 col-md-6 col-sm-12">
