--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,7 @@
-<h1>A better way to do</h1>
+<div class="container">
+  <div class="row mt-4">
+    <div class="jumbotron col-12">
+      <h2 class="display-5 text-center">Make It To-Done Today</h2>
+    </div>
+  </div>
+</div>
