--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/assets/css/members.css">
 
 <div class="container">
-  <div class="row align-items-center rounded my-2 p-1 border border-info bg-light">
+  <div class="row align-items-center rounded my-2 p-2 bg-light">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <h3 class="text-center text-info">{{username}}'s To Do's</h3>
+      <h3 class="text-center text-white">{{username}}'s To Do's</h3>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 bg-info p-1 rounded">
       <div class="form-row">
@@ -11,7 +11,7 @@
           <label class="text-white text-center p-0 m-0" for="project">New Project</label>
         </div>
         <div class="input-group col-8">
-          <input type="text" name="project" id="project" class="form-control">
+          <input type="text" name="project" id="project" class="form-control" autocomplete="off">
           <div class="input-group-append">
             <button class="btn btn-dark" id="addProject">+</button>
           </div>
