push before deployment to heroku

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,7 +4,7 @@
     <div class="col-lg-6 col-md-8 col-sm-10 m-auto">
       <div class="card p-3 bg-light">
         {{#if msg}}
-        <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
           {{msg}}.
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
