--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,32 @@
 <div class="container">
   <div class="row mt-4">
-    <div class="jumbotron col-12">
-      <h2 class="display-5 text-center">Make It To-Done Today</h2>
+    <div class="col-12 bg-danger p-3 text-white">
+      <h2 class="text-center">Track Different Projects</h2>
     </div>
   </div>
+  <div class="row">
+    <div class="col-12 my-2 bg-white p-3 text-primary">
+      <h2 class="text-center">Hide What You Want</h2>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 bg-primary p-3 text-white">
+      <h2 class="text-center">Cross Things off of Your List</h2>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-12 bg-secondary text-white">
+      <h3 class="text-center">It's a better way to do todos</h3>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-5 text-center">
+      <a class="display-3 text-white" href="/login">Login</a>
+    </div>
+    <div class="col-2 bg-info"></div>
+    <div class="col-5 text-center">
+      <a class="display-3 text-white" href="/signup">Sign Up</a>
+    </div>
+  </div>
+
 </div>
