--- a/public/assets/css/members.css
+++ b/public/assets/css/members.css
@@ -62,6 +62,7 @@
 
 .newProjectBottom{
   margin-top: 10px;
+  position: relative;
 }
 
 .hideBtn{
@@ -93,4 +94,21 @@
 
 .strike-through{
   text-decoration: line-through;
+}
+
+/* .newTodo{
+  transform: scaleY(0);
+  animation-name: inflate;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes inflate{
+  0% {transform:scaleY(0)}
+  100% {transform:scaleY(1)}
+} */
+
+.newTodo{
+  transform: scaleY(0) rotateZ(45deg);
+  opacity: 0;
 }
