--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,32 +1,79 @@
-<div class="container">
-  <div class="row mt-4">
+<link rel="stylesheet" href="/assets/css/home.css">
+
+<div class="container" id="changeOverflow">
+  <div class="row mt-4 roll">
     <div class="col-12 bg-danger p-3 text-white">
       <h2 class="text-center">Track Different Projects</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row roll">
     <div class="col-12 my-2 bg-white p-3 text-primary">
       <h2 class="text-center">Hide What You Want</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row roll">
     <div class="col-12 bg-primary p-3 text-white">
-      <h2 class="text-center">Cross Things off of Your List</h2>
+      <h2 class="text-center">Cross Things Off Your List</h2>
     </div>
   </div>
   <div class="row mt-3">
     <div class="col-12 bg-secondary text-white">
-      <h3 class="text-center">It's a better way to do todos</h3>
+      <h5 class="text-center">it's a better way to do todos</h5>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-5 text-center">
-      <a class="display-3 text-white" href="/login">Login</a>
+  <div class="row mt-3" id="bring">
+    <div class="col-md-5 col-sm-12 text-center">
+      <a class="display-4 text-white" href="/login">Login</a>
     </div>
-    <div class="col-2 bg-info"></div>
-    <div class="col-5 text-center">
-      <a class="display-3 text-white" href="/signup">Sign Up</a>
+    <div class="col-md-2 col-sm-12 bg-info"></div>
+    <div class="col-md-5 col-sm-12 text-center">
+      <a class="display-4 text-white" href="/signup">Sign Up</a>
     </div>
   </div>
 
 </div>
+
+<script>
+  const rolls = [].slice.call(document.querySelectorAll(".roll"));
+  let complete = 0;
+
+  rolls.forEach((roll, i) => {
+    let ani = roll.animate({
+      transform: ["rotateZ(-10deg)", "rotateZ(0deg)"],
+      opacity: ["0", "1"]
+    }, {
+      duration: 600,
+      fill: "forwards",
+      delay: 100 * i
+    })
+
+    ani.onfinish = () => {
+      console.log(complete)
+      if (complete > 1) {
+        // run function
+        console.log("would run");
+        bringUp();
+      } else {
+        complete++;
+      }
+    }
+  })
+
+  function bringUp() {
+    const bring = document.getElementById("bring");
+    const changeOverflow = document.body;
+
+    const ani = bring.animate({
+      transform: ["translateY(500px)", "translateY(0px)"],
+      opacity: ["0", ".1" , "1"]
+    }, {
+      duration: 500,
+      fill: "forwards",
+      delay: 500
+    })
+
+    ani.onfinish = () => {
+      changeOverflow.style.overflow = "visible"
+    }
+  }
+</script>
