--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-lg-6 col-md-8 col-sm-10 m-auto">
       <div class="card p-3 bg-light">
-        <div class="form">
+        <div class="form" id="form">
           <div class="form-group">
             <label class="text-dark" for="username">Username</label>
             <input type="text" name="username" id="username" class="form-control">
