small copy changes and added login alert function

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,9 +1,14 @@
 <link rel="stylesheet" href="/assets/css/members.css">
 
 <div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h2 class="display-4 text-white text-center">To-Do's</h2>
+    </div>
+  </div>
   <div class="row align-items-center rounded my-2 p-2 bg-light">
     <div class="col-lg-6 col-md-6 col-sm-12">
-      <h3 class="text-center text-white">{{username}}'s To Do's</h3>
+      <h3 class="text-center text-secondary">{{username}}</h3>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 bg-info p-1 rounded">
       <div class="form-row">
