--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
           </button>
         </div>
         {{/if}}
-        <div class="form">
+        <div class="form" id="form">
           <div class="form-group">
             <label for="email" class="text-dark">Email</label>
             <input type="text" name="email" id="email" class="form-control" value={{email}}>
