--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,44 +2,44 @@
 
 <div class="container" id="changeOverflow">
   <div class="row mt-4 roll">
-    <div class="col-12 bg-danger p-3 text-white">
+    <div class="col-12 rounded bg-danger p-3 text-white">
       <h2 class="text-center">Track Different Projects</h2>
     </div>
   </div>
   <div class="row roll">
-    <div class="col-12 my-2 bg-white p-3 text-primary">
+    <div class="col-12 rounded my-2 bg-white p-3 text-primary">
       <h2 class="text-center">Hide What You Want</h2>
     </div>
   </div>
   <div class="row roll">
-    <div class="col-12 bg-primary p-3 text-white">
+    <div class="col-12 rounded bg-primary p-3 text-white">
       <h2 class="text-center">Cross Things Off Your List</h2>
     </div>
   </div>
   <div class="row mt-3">
-    <div class="col-12 bg-secondary text-white">
+    <div class="col-12 rounded bg-secondary text-white">
       <h5 class="text-center">it's a better way to do todos</h5>
     </div>
   </div>
-  {{!-- Conditional on No USER --}}
+
   {{#unless username}}
-  <div class="row mt-3" id="bring">
+  <div class="row mt-3 align-items-center p-1" id="bring">
     <div class="col-md-5 col-sm-12 text-center">
       <a class="display-4 text-white" href="/login">Login</a>
     </div>
-    <div class="col-md-2 col-sm-12 bg-info"></div>
+    <div class="col-md-2 col-sm-12 bg-info p-2 rounded"></div>
     <div class="col-md-5 col-sm-12 text-center">
       <a class="display-4 text-white" href="/signup">Sign Up</a>
     </div>
   </div>
   {{/unless}}
-  {{!-- Conditional on USER --}}
+
   {{#if username}}
-  <div class="row mt-3 align-items-center" id="bring">
+  <div class="row mt-3 align-items-center p-1" id="bring">
     <div class="col-md-5 col-sm-12 text-center">
       <p class="display-4 text-center">{{username}}</p>
     </div>
-    <div class="col-md-2 col-sm-12 bg-info p-2"></div>
+    <div class="col-md-2 col-sm-12 bg-info p-2 rounded"></div>
     <div class="col-md-5 col-sm-12 text-center">
       <a class="display-4 text-white" href="/members">To Do List</a>
     </div>
